--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,8 +17,8 @@
     "react/react-in-jsx-scope": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "react/prop-types": "off",
-    "react/jsx-first-prop-new-line": [1, "multiline"],
-    "react/jsx-max-props-per-line": [1, { "maximum": 1, "when": "always" }],
+    // "react/jsx-first-prop-new-line": [1, "multiline"],
+    // "react/jsx-max-props-per-line": [1, { "maximum": 1, "when": "always" }],
     "react/jsx-indent-props": [2, 2],
     "react/jsx-closing-bracket-location": [2, "tag-aligned"],
     "react/jsx-filename-extension": "off",
