--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://weeks6.github.io/react-mesto-auth/",
   "author": {
     "email": "bridcarp1@gmail.com",
     "name": "Igor Ilin"
